@@ -1,3 +1,9 @@
+2006-04-26  Nate Nielsen  <nielsen@memberwebs.com>
+    
+    * agent/seahorse-agent-cache.c: Compatibility with gnome-gpg
+    * agent/seahorse-agent-prompt.c: Don't show two prompts on top 
+    of each other.
+    
 2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-cache.c:
